feat: ✨ new project

--- a/front_angular/src/app/app.component.html
+++ b/front_angular/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-url-shortened></app-url-shortened>
-<app-form></app-form>
+<app-url-shortened [urls]="urls"></app-url-shortened>
+<app-form (url)="urlfunction($event)"></app-form>
