--- a/front_angular/src/app/url-shortened/url-shortened.component.html
+++ b/front_angular/src/app/url-shortened/url-shortened.component.html
@@ -1,6 +1,6 @@
 <p>Salut {{ name }} !</p>
 <button (click)="sendMessage()">Envoyer</button>
-<p *ngFor="let url of allUrls$ | async">
+<p *ngFor="let url of urls">
   {{ url.originalUrl }} -
   <a [href]="env.baseApiUrl + '/' + url.shortUrl" target="_blank"
     >{{ env.baseApiUrl }}/{{ url.shortUrl }}</a
