--- a/front_angular/src/app/form/form.component.html
+++ b/front_angular/src/app/form/form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <label>
-    input:
-    <input type="text" formControlName="input" />
+    originalUrl:
+    <input type="text" formControlName="originalUrl" />
   </label>
   <br />
   <button type="submit">Envoyer</button>
